--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ממשק ניהול</title>
+<title>example</title>
 </head>
 
 <body>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td height="60" bgcolor="#0a1ed4"  style="color:#FFFFFF;padding-left:10px;padding-right:10px;"><span style="font-size:265%;font-style:italic">PIJIMI</span></td>
-    <td height="60" bgcolor="#0a1ed4" dir="rtl" style="color:#FFFFFF;padding-left:10px;padding-right:10px;text-align:right;direction:rtl"><span style="font-size:265%;font-style:italic">ממשק ניהול</span></td>
+    <td height="60" bgcolor="#0a1ed4"  style="color:#FFFFFF;padding-left:10px;padding-right:10px;"><span style="font-size:265%;font-style:italic">title</span></td>
+    <td height="60" bgcolor="#0a1ed4" dir="rtl" style="color:#FFFFFF;padding-left:10px;padding-right:10px;text-align:right;direction:rtl"><span style="font-size:265%;font-style:italic">example</span></td>
   </tr>
 </table>
 
